--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,13 +1,6 @@
 php:
   preset: laravel
-  version: 8
   disabled:
-    - no_unused_imports
-  finder:
-    not-name:
-      - index.php
-js:
-  finder:
-    not-name:
-      - webpack.mix.js
+    - unused_use
+js: true
 css: true
