--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ]
+        ],
+        "test": "phpunit"
     },
     "config": {
         "optimize-autoloader": true,
