--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,17 @@
     "type": "project",
     "require": {
         "php": "^8.1",
-        "laravel/lumen-framework": "^9.0"
+        "laravel/lumen-framework": "^9.0",
+        "paulsnar/redis": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^9.5.10"
     },
+    "repositories": [
+        {"type": "vcs", "url": "https://github.com/paulsnar/php-redis.git"}
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
