--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "google/cloud-storage": "^1.26",
         "laravel/lumen-framework": "^9.0",
         "paulsnar/redis": "^2.0"
     },
