chore: Add GCS service provider, env vars for config
Resolves: #16

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ DB_PASSWORD=hunter2
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+GOOGLE_APPLICATION_CREDENTIALS=
+FOXHOUND_GCS_PREFIX=gs://BUCKET-NAME/PATH-PREFIX-IF-NEEDED/
