--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Lumen
+APP_NAME=Foxhound
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -16,7 +16,7 @@ DB_USERNAME=foxhound
 DB_PASSWORD=hunter2
 
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 
 GOOGLE_APPLICATION_CREDENTIALS=
 FOXHOUND_GCS_PREFIX=gs://BUCKET-NAME/PATH-PREFIX-IF-NEEDED/
