--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.1",
         "google/cloud-storage": "^1.26",
         "laravel/lumen-framework": "^9.0",
-        "paulsnar/redis": "^2.0"
+        "paulsnar/redis": "^2.0",
+        "php-ds/php-ds": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
